# lyricsgenius-mcp-server

./: .gitignore  README.md  fastmcp.json  pyproject.toml  requirements.txt  server.py
