[project]
name = "lyricsgenius-mcp-server"
version = "0.1.0"
description = "MCP server for accessing song lyrics and artist information from Genius.com"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "lyricsgenius>=3.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
